--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,15 +6,15 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4a0864;
+  --ifm-color-primary-dark: #782941;
+  --ifm-color-primary-darker: #5a2771;
+  --ifm-color-primary-darkest: #35205d;
+  --ifm-color-primary-light: #3d3392;
+  --ifm-color-primary-lighter: #993599;
+  --ifm-color-primary-lightest: #a33cad;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(24, 19, 24, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -26,5 +26,5 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(24, 29, 29, 0.3);
 }
