--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,17 +14,17 @@
   --ifm-color-primary-lighter: #993599;
   --ifm-color-primary-lightest: #a33cad;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(24, 19, 24, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(48, 26, 48, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(24, 29, 29, 0.3);
+  --ifm-color-primary: #8a52f1;
+  --ifm-color-primary-dark: #5c40da;
+  --ifm-color-primary-darker: #6045d4;
+  --ifm-color-primary-darkest: #5b40be;
+  --ifm-color-primary-light: #6d34d6;
+  --ifm-color-primary-lighter: #7a48d6;
+  --ifm-color-primary-lightest: #765ff8;
+  --docusaurus-highlighted-code-line-bg: rgba(19, 11, 31, 0.3);
 }
